# cg-website

./: .coverage  .coveragerc  .gitignore  Dockerfile  pyproject.toml  website.py
.github/workflows/: main.yml
static/: cover.css  projects.css  styles.css  summary.css
templates/: about_me.html  base.html  home.html  projects.html  summary.html
tests/: conftest.py  pytest.ini
tests/unit_tests/: test_urls.py
