[tool.poetry]
name = "cg-website"
version = "0.1.0"
description = ""
authors = ["Ciran GÜRBÜZ <ciran.gurbuz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pytest-flask = "^1.3.0"
requests = "^2.31.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
